--- a/testwallet/Makefile.API
+++ b/testwallet/Makefile.API
@@ -17,6 +17,41 @@ PROGRAM = libOTAPI.a
 DEBUG_PROGRAM = libOTAPId.a
 
 
+# Find out what platform we're on.
+UNAME := $(shell uname -s)
+
+OT_PLATFORM := ___OT_PLATFORM_UNKNOWN___
+
+# I allow the user the option to force-override the build platform.
+# Using make PLATFORM=darwin, for example, you will build in darwin mode
+# even if you are on a linux box.
+#
+
+ifeq ($(PLATFORM), darwin)
+UNAME := Darwin
+endif
+ifeq ($(PLATFORM), linux)
+UNAME := Linux
+endif
+ifeq ($(PLATFORM), freebsd)
+UNAME := FreeBSD
+endif
+
+ifeq ($(UNAME), Darwin)
+OT_PLATFORM := darwin
+endif
+ifeq ($(UNAME), Linux)
+OT_PLATFORM := linux
+endif
+ifeq ($(UNAME), FreeBSD)
+OT_PLATFORM := freebsd
+endif
+
+
+PLATFORM = $(OT_PLATFORM)
+
+
+
 OT_INCLUDEDIRS = \
 	-I../OTLib/irrxml \
 	-I../OTLib \
@@ -45,10 +80,52 @@ C_COMPILER = cc
 API_LIBS =  -lssl -lcrypto  -lOTLib -lssl -lcrypto  -lOTLib  -lssl -lcrypto -lOTLib  -lssl -lcrypto -lOTLib
 API_DEBUG_LIBS = -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd  -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd
 #
-# FT: I tested this. The above version worked on Linux, and the below version did not.
+# FT: I tested this recently. The above version worked on Linux, and the below version did not.
 #
 #API_LIBS = -lssl  -lcrypto -lOTLib
 #API_DEBUG_LIBS =  -lssl -lcrypto  -lOTLibd
+
+
+
+
+LINUX_LIBDIR = lib
+LBITS := $(shell getconf LONG_BIT)
+ifeq ($(LBITS),64)
+LINUX_LIBDIR = lib64
+endif
+
+# SSL Folders!
+
+# For Darwin I use /opt instead of /usr, since OpenSSL 1.0.0a is
+# installed to that location by MacPorts.
+#
+ifeq ($(PLATFORM), darwin)
+SSL_INCLUDEDIRS = -I/opt/local/include
+SSL_LIBDIRS = -L/opt/local/lib
+endif
+
+ifeq ($(PLATFORM), linux)
+SSL_INCLUDEDIRS = -I/usr/local/ssl/include
+SSL_LIBDIRS = -L/usr/local/ssl/$(LINUX_LIBDIR)
+endif
+
+ifeq ($(PLATFORM), freebsd)
+SSL_INCLUDEDIRS = -I/usr/local/include
+SSL_LIBDIRS = -L/usr/local/lib
+#SSL_LIBDIRS = -L/usr/ports/security/openssl/work/openssl-1.0.0a
+endif
+
+
+
+
+# Eventually other platform-specific stuff, like 64-bit, can go here.
+
+PLATFORM_INCLUDEDIRS += \
+	$(SSL_INCLUDEDIRS)
+
+PLATFORM_LIBDIRS += \
+	$(SSL_LIBDIRS)
+
 
 
 
@@ -58,7 +135,6 @@ API_DEBUG_LIBS = -lssl -lcrypto -lOTLibd -lssl -lcrypto -lOTLibd  -lssl -lcrypto
 #
 ifeq ($(PLATFORM), darwin)
 
-PLATFORM_INCLUDEDIRS = -I/usr/local/ssl/include
 
 DYNAMIC_OTLIB_CONTENTS = # empty
 
@@ -140,8 +216,6 @@ endif
 
 ifeq ($(PLATFORM), linux)
 
-PLATFORM_INCLUDEDIRS = -I/usr/local/ssl/include
-#PLATFORM_LIBDIRS += -L/usr/local/lib
 
 C_COMPILER = gcc
 
@@ -160,7 +234,7 @@ CSHARP_LDFLAGS = -shared
 # --- JAVA
 JAVA_PROGRAM = libOTAPI.so
 JAVA_DEBUG_PROGRAM = libOTAPId.so 
-JAVA_INCLUDEDIRS = -I/usr/lib/jvm/java-6-openjdk/include
+JAVA_INCLUDEDIRS = -I/usr/$(LINUX_LIBDIR)/jvm/java-6-openjdk/include
 JAVA_LDFLAGS = -shared
 
 
@@ -174,13 +248,13 @@ JAVA_LDFLAGS = -shared
 #PERL5_CFLAGS = -shared $(shell perl -e 'use Config; print $Config{ccflags}')
 #PERL5_LDFLAGS = -shared $(shell perl -e 'use Config; print $Config{ldflags}')
 #PERL5_CFLAGS = -shared -D_REENTRANT -D_GNU_SOURCE -DDEBIAN -fno-strict-aliasing -pipe -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
-#PERL5_LDFLAGS = -shared -L/usr/local/lib
+#PERL5_LDFLAGS = -shared -L/usr/local/$(LINUX_LIBDIR)
 #
 PERL5_PROGRAM = OTAPI.bundle 
 PERL5_DEBUG_PROGRAM = OTAPId.bundle
-PERL5_INCLUDEDIRS = -I/usr/lib/perl/5.10.0/CORE
+PERL5_INCLUDEDIRS = -I/usr/$(LINUX_LIBDIR)/perl/5.10.0/CORE
 PERL5_CFLAGS = -shared -D_REENTRANT -D_GNU_SOURCE -DDEBIAN -fno-strict-aliasing -pipe -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
-PERL5_LDFLAGS = -shared -L/usr/local/lib
+PERL5_LDFLAGS = -shared -L/usr/local/$(LINUX_LIBDIR)
 
 
 # --- PHP5
@@ -196,13 +270,13 @@ PHP5_LDFLAGS = -shared
 # --- PYTHON
 #
 #PYTHON_INCLUDEDIRS = -I/usr/include/python2.5
-#PYTHON_LIBDIRS = -L/usr/lib/python2.5
+#PYTHON_LIBDIRS = -L/usr/$(LINUX_LIBDIR)/python2.5
 #
 PYTHON_PROGRAM = _OTAPI.so
 PYTHON_DEBUG_PROGRAM = _OTAPId.so
 PYTHON_CLFAGS = $(shell python-config --cflags) 
 PYTHON_INCLUDEDIRS = -I/usr/include/python2.5
-PYTHON_LIBDIRS = -L/usr/lib/python2.5
+PYTHON_LIBDIRS = -L/usr/$(LINUX_LIBDIR)/python2.5
 PYTHON_LDFLAGS = -shared $(shell python-config --ldflags) 
 
 
@@ -233,12 +307,6 @@ endif
 # --- FreeBSD ----
 
 ifeq ($(PLATFORM), freebsd)
-
-
-PLATFORM_INCLUDEDIRS = -I/usr/local/include
-PLATFORM_LIBDIRS += -L/usr/local/lib
-#PLATFORM_LIBDIRS += /usr/ports/security/openssl/work/openssl-1.0.0a
-# for Ben (above.)
 
 DYNAMIC_OTLIB_CONTENTS = # empty
 
@@ -320,6 +388,9 @@ TCL_LDFLAGS = -shared
 
 endif
 # End FreeBSD -------------------------------------------------------------
+
+
+
 
 
 
