Fix for perl5 and Ruby APIs on Linux/Darwin.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/OTLib/Makefile
+++ b/OTLib/Makefile
@@ -180,7 +180,7 @@ endif
 
 #
 # Default target: the first target is the default target.
-# Just type "make -f Makefile.Linux" to build it.
+# Just type "make" to build it.
 #
 
 all: $(PROGRAM)
