--- a/testwallet/Makefile.API
+++ b/testwallet/Makefile.API
@@ -150,20 +150,20 @@ DYNAMIC_OTLIB_CONTENTS = # empty
 
 
 # --- Common Lisp
-LISP_PROGRAM = OTAPI.so
-LISP_DEBUG_PROGRAM = OTAPId.so 
+LISP_PROGRAM = otapi.so
+LISP_DEBUG_PROGRAM = otapid.so 
 LISP_LDFLAGS = -dynamiclib
 
 # --- C# (C-Sharp)
-CSHARP_PROGRAM = libOTAPI.so  
-CSHARP_DEBUG_PROGRAM = libOTAPId.so
+CSHARP_PROGRAM = libotapi.so  
+CSHARP_DEBUG_PROGRAM = libotapid.so
 CSHARP_LDFLAGS = -dynamiclib
 
 
 # --- JAVA
 # -I/Developer/SDKs/MacOSX10.6.sdk/System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Headers
-JAVA_PROGRAM = libOTAPI.jnilib  
-JAVA_DEBUG_PROGRAM = libOTAPId.jnilib  
+JAVA_PROGRAM = libotapi.jnilib  
+JAVA_DEBUG_PROGRAM = libotapid.jnilib  
 JAVA_INCLUDEDIRS = -I$(shell javaconfig Headers)
 JAVA_LDFLAGS = -framework JavaVM -bundle
 
@@ -175,8 +175,8 @@ JAVA_LDFLAGS = -framework JavaVM -bundle
 #PERL5_LDFLAGS = -bundle $(shell perl -MExtUtils::Embed -e ldopts)
 #DEBUG_LDFLAGS += -bundle $(shell perl -MExtUtils::Embed -e ldopts)
 #
-PERL5_PROGRAM = OTAPI.bundle 
-PERL5_DEBUG_PROGRAM = OTAPId.bundle
+PERL5_PROGRAM = otapi.bundle 
+PERL5_DEBUG_PROGRAM = otapid.bundle
 PERL5_INCLUDEDIRS = # empty
 PERL5_CFLAGS =  -bundle -arch x86_64  -g -pipe -fno-common -DPERL_DARWIN -fno-strict-aliasing  -no-cpp-precomp -I/opt/local/include  -I/System/Library/Perl/5.10.0/darwin-thread-multi-2level/CORE
 PERL5_LDFLAGS = -bundle -arch x86_64 -L/opt/local/lib  -L/System/Library/Perl/5.10.0/darwin-thread-multi-2level/CORE -lperl -ldl -lm -lutil -lc
@@ -185,8 +185,8 @@ PERL5_LDFLAGS = -bundle -arch x86_64 -L/opt/local/lib  -L/System/Library/Perl/5.
 # --- PHP5
 #/usr/libexec/apache2/libphp5.so
 #
-PHP5_PROGRAM = OTAPI.so
-PHP5_DEBUG_PROGRAM = OTAPId.so
+PHP5_PROGRAM = otapi.so
+PHP5_DEBUG_PROGRAM = otapid.so
 PHP5_INCLUDEDIRS = $(shell php-config --includes) 
 PHP5_LDFLAGS = -bundle_loader /usr/libexec/apache2/libphp5.so -flat_namespace -bundle
 
@@ -202,21 +202,21 @@ PHP5_LDFLAGS = -bundle_loader /usr/libexec/apache2/libphp5.so -flat_namespace -b
 #LDFLAGS += -dynamiclib -lpython
 #DEBUG_LDFLAGS += -dynamiclib -lpython
 #
-PYTHON_PROGRAM = _OTAPI.so
-PYTHON_DEBUG_PROGRAM = _OTAPId.so
+PYTHON_PROGRAM = _otapi.so
+PYTHON_DEBUG_PROGRAM = _otapid.so
 PYTHON_INCLUDEDIRS = -I/usr/include/python2.6
 PYTHON_LIBDIRS = -L/usr/lib/python2.6
 PYTHON_LDFLAGS = -dynamiclib -lpython
 
 # --- RUBY!
-RUBY_PROGRAM = OTAPI.bundle
-RUBY_DEBUG_PROGRAM = OTAPId.bundle
+RUBY_PROGRAM = otapi.bundle
+RUBY_DEBUG_PROGRAM = otapid.bundle
 RUBY_INCLUDEDIRS = -I$(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFIG["topdir"]') 
 RUBY_LDFLAGS = -dynamiclib $(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFIG["LIBRUBYARG"]')
 
 # --- TCL
-TCL_PROGRAM = OTAPI.so
-TCL_DEBUG_PROGRAM = OTAPId.so
+TCL_PROGRAM = otapi.so
+TCL_DEBUG_PROGRAM = otapid.so
 TCL_INCLUDEDIRS = # empty
 TCL_LDFLAGS = -dynamiclib -framework Tcl
 
@@ -234,18 +234,18 @@ C_COMPILER = gcc
 DYNAMIC_OTLIB_CONTENTS = DYNAMIC_OTLIB=1
 
 # --- Common Lisp
-LISP_PROGRAM = OTAPI.so
-LISP_DEBUG_PROGRAM = OTAPId.so 
+LISP_PROGRAM = otapi.so
+LISP_DEBUG_PROGRAM = otapid.so 
 LISP_LDFLAGS = -shared
 
 # --- C# (C-Sharp)
-CSHARP_PROGRAM = libOTAPI.so  
-CSHARP_DEBUG_PROGRAM = libOTAPId.so
+CSHARP_PROGRAM = libotapi.so  
+CSHARP_DEBUG_PROGRAM = libotapid.so
 CSHARP_LDFLAGS = -shared
 
 # --- JAVA
-JAVA_PROGRAM = libOTAPI.so
-JAVA_DEBUG_PROGRAM = libOTAPId.so 
+JAVA_PROGRAM = libotapi.so
+JAVA_DEBUG_PROGRAM = libotapid.so 
 JAVA_INCLUDEDIRS = -I/usr/$(LINUX_LIBDIR)/jvm/java-6-openjdk/include
 JAVA_LDFLAGS = -shared
 
@@ -262,8 +262,8 @@ JAVA_LDFLAGS = -shared
 #PERL5_CFLAGS = -shared -D_REENTRANT -D_GNU_SOURCE -DDEBIAN -fno-strict-aliasing -pipe -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 #PERL5_LDFLAGS = -shared -L/usr/local/$(LINUX_LIBDIR)
 #
-PERL5_PROGRAM = OTAPI.bundle 
-PERL5_DEBUG_PROGRAM = OTAPId.bundle
+PERL5_PROGRAM = otapi.so 
+PERL5_DEBUG_PROGRAM = otapid.so
 PERL5_INCLUDEDIRS = -I/usr/$(LINUX_LIBDIR)/perl/5.10.0/CORE
 PERL5_CFLAGS = -shared -D_REENTRANT -D_GNU_SOURCE -DDEBIAN -fno-strict-aliasing -pipe -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 PERL5_LDFLAGS = -shared -L/usr/local/$(LINUX_LIBDIR)
@@ -273,8 +273,8 @@ PERL5_LDFLAGS = -shared -L/usr/local/$(LINUX_LIBDIR)
 #/usr/libexec/apache2/libphp5.so
 #PHP5_INCLUDEDIRS = `php-config --includes`
 #
-PHP5_PROGRAM = OTAPI.so
-PHP5_DEBUG_PROGRAM = OTAPId.so
+PHP5_PROGRAM = otapi.so
+PHP5_DEBUG_PROGRAM = otapid.so
 PHP5_INCLUDEDIRS = `php-config --includes`
 PHP5_LDFLAGS = -shared
 
@@ -284,8 +284,8 @@ PHP5_LDFLAGS = -shared
 #PYTHON_INCLUDEDIRS = -I/usr/include/python2.5
 #PYTHON_LIBDIRS = -L/usr/$(LINUX_LIBDIR)/python2.5
 #
-PYTHON_PROGRAM = _OTAPI.so
-PYTHON_DEBUG_PROGRAM = _OTAPId.so
+PYTHON_PROGRAM = _otapi.so
+PYTHON_DEBUG_PROGRAM = _otapid.so
 PYTHON_CLFAGS = $(shell python-config --cflags) 
 PYTHON_INCLUDEDIRS = -I/usr/include/python2.5
 PYTHON_LIBDIRS = -L/usr/$(LINUX_LIBDIR)/python2.5
@@ -293,8 +293,8 @@ PYTHON_LDFLAGS = -shared $(shell python-config --ldflags)
 
 
 # --- RUBY!
-RUBY_PROGRAM = OTAPI.bundle
-RUBY_DEBUG_PROGRAM = OTAPId.bundle
+RUBY_PROGRAM = otapi.so
+RUBY_DEBUG_PROGRAM = otapid.so
 RUBY_INCLUDEDIRS = -I$(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFIG["topdir"]') 
 RUBY_LDFLAGS = -shared $(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFIG["LIBRUBYARG"]')
 
@@ -304,8 +304,8 @@ RUBY_LDFLAGS = -shared $(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFI
 # use this to find tcl.h:
 # find / tcl.h | grep tcl.h
 # Then make sure the directory below is correct for your system….
-TCL_PROGRAM = OTAPI.so
-TCL_DEBUG_PROGRAM = OTAPId.so
+TCL_PROGRAM = otapi.so
+TCL_DEBUG_PROGRAM = otapid.so
 TCL_INCLUDEDIRS = -I/usr/include/tcl8.4
 TCL_LDFLAGS = -shared
 
@@ -323,18 +323,18 @@ ifeq ($(PLATFORM), freebsd)
 DYNAMIC_OTLIB_CONTENTS = # empty
 
 # --- Common Lisp
-LISP_PROGRAM = OTAPI.so
-LISP_DEBUG_PROGRAM = OTAPId.so 
+LISP_PROGRAM = otapi.so
+LISP_DEBUG_PROGRAM = otapid.so 
 LISP_LDFLAGS = -shared
 
 # --- C# (C-Sharp)
-CSHARP_PROGRAM = libOTAPI.so  
-CSHARP_DEBUG_PROGRAM = libOTAPId.so
+CSHARP_PROGRAM = libotapi.so  
+CSHARP_DEBUG_PROGRAM = libotapid.so
 CSHARP_LDFLAGS = -shared
 
 # --- JAVA
-JAVA_PROGRAM = libOTAPI.so
-JAVA_DEBUG_PROGRAM = libOTAPId.so 
+JAVA_PROGRAM = libotapi.so
+JAVA_DEBUG_PROGRAM = libotapid.so 
 JAVA_INCLUDEDIRS = # empty
 JAVA_LDFLAGS = -shared
 
@@ -351,8 +351,8 @@ JAVA_LDFLAGS = -shared
 #PERL5_CFLAGS = -shared -D_REENTRANT -D_GNU_SOURCE -DDEBIAN -fno-strict-aliasing -pipe -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 #PERL5_LDFLAGS = -shared -L/usr/local/lib
 #
-PERL5_PROGRAM = OTAPI.bundle 
-PERL5_DEBUG_PROGRAM = OTAPId.bundle
+PERL5_PROGRAM = otapi.bundle 
+PERL5_DEBUG_PROGRAM = otapid.bundle
 PERL5_INCLUDEDIRS = -I/usr/lib/perl/5.10.0/CORE
 PERL5_CFLAGS = -shared -D_REENTRANT -D_GNU_SOURCE -DDEBIAN -fno-strict-aliasing -pipe -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 PERL5_LDFLAGS = -shared -L/usr/local/lib
@@ -362,8 +362,8 @@ PERL5_LDFLAGS = -shared -L/usr/local/lib
 #/usr/libexec/apache2/libphp5.so
 #PHP5_INCLUDEDIRS = `php-config --includes`
 #
-PHP5_PROGRAM = OTAPI.so
-PHP5_DEBUG_PROGRAM = OTAPId.so
+PHP5_PROGRAM = otapi.so
+PHP5_DEBUG_PROGRAM = otapid.so
 PHP5_INCLUDEDIRS = `php-config --includes`
 PHP5_LDFLAGS = -shared
 
@@ -373,8 +373,8 @@ PHP5_LDFLAGS = -shared
 #PYTHON_INCLUDEDIRS = -I/usr/include/python2.5
 #PYTHON_LIBDIRS = -L/usr/lib/python2.5
 #
-PYTHON_PROGRAM = _OTAPI.so
-PYTHON_DEBUG_PROGRAM = _OTAPId.so
+PYTHON_PROGRAM = _otapi.so
+PYTHON_DEBUG_PROGRAM = _otapid.so
 PYTHON_CLFAGS = $(shell python-config --cflags) 
 PYTHON_INCLUDEDIRS = -I/usr/include/python2.5
 PYTHON_LIBDIRS = -L/usr/lib/python2.5
@@ -382,8 +382,8 @@ PYTHON_LDFLAGS = -shared $(shell python-config --ldflags)
 
 
 # --- RUBY!
-RUBY_PROGRAM = OTAPI.bundle
-RUBY_DEBUG_PROGRAM = OTAPId.bundle
+RUBY_PROGRAM = otapi.so
+RUBY_DEBUG_PROGRAM = otapid.so
 RUBY_INCLUDEDIRS = -I$(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFIG["topdir"]') 
 RUBY_LDFLAGS = -shared $(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFIG["LIBRUBYARG"]')
 
@@ -393,8 +393,8 @@ RUBY_LDFLAGS = -shared $(shell ruby -e 'require "rbconfig"; puts RbConfig::CONFI
 # use this to find tcl.h:
 # find / tcl.h | grep tcl.h
 # Then make sure the directory below is correct for your system….
-TCL_PROGRAM = OTAPI.so
-TCL_DEBUG_PROGRAM = OTAPId.so
+TCL_PROGRAM = otapi.so
+TCL_DEBUG_PROGRAM = otapid.so
 TCL_INCLUDEDIRS = -I/usr/include/tcl8.4
 TCL_LDFLAGS = -shared
 
@@ -419,7 +419,7 @@ BOOL_DYNAMIC_OTLIB = 0
 #
 ifeq ($(LANGUAGE), c)
 else
-API_CFLAGS += -fpic
+API_CFLAGS += -fPIC
 endif
 
 # --- Common Lisp
@@ -529,8 +529,9 @@ XMLRPCPP_LIBDIR = -L../xmlrpcpp/
 
 ifeq ($(TRANSPORT), XmlRpc)
 API_CFLAGS += -DOT_XMLRPC_MODE
-API_LDFLAGS += -lXmlRpc
 PLATFORM_INCLUDEDIRS += $(XMLRPCPP_INCLUDEDIR)
+
+API_LDFLAGS += -lXmlRpc
 PLATFORM_LIBDIRS += $(XMLRPCPP_LIBDIR)
 endif
 
@@ -583,17 +584,42 @@ DEBUG_LIBS = $(API_DEBUG_LIBS)
 
 # --- LDFLAGS
 #
-LDFLAGS = $(LIBDIRS) $(LIBS) $(API_LDFLAGS)
-DEBUG_LDFLAGS = $(LIBDIRS) $(DEBUG_LIBS) $(API_LDFLAGS) 
+LDFLAGS = $(LIBDIRS) $(API_LDFLAGS) $(LIBS) 
+DEBUG_LDFLAGS = $(LIBDIRS) $(API_LDFLAGS) $(DEBUG_LIBS) 
+
+
+
+
+
 
 #
 ifeq ($(LANGUAGE), c)
-LINK_COMMAND  = ar rc
-DEBUG_LINK_COMMAND = ar rc
+LINK_COMMAND  = ar rc $(PROGRAM) $(CXXOBJECTS) $(COBJECTS)
+DEBUG_LINK_COMMAND = ar rc $(DEBUG_PROGRAM) $(CXXOBJECTS) $(COBJECTS)
 else
-LINK_COMMAND = $(CXX) $(LDFLAGS) -o
-DEBUG_LINK_COMMAND = $(CXX) $(DEBUG_LDFLAGS) -o
+# ---------------------------------------------------------------------
+# --- DARWIN
+ifeq ($(PLATFORM), darwin)
+LINK_COMMAND = $(CXX) $(LDFLAGS) -o $(PROGRAM) $(CXXOBJECTS) $(COBJECTS)
+DEBUG_LINK_COMMAND = $(CXX) $(DEBUG_LDFLAGS) -o $(DEBUG_PROGRAM) $(CXXOBJECTS) $(COBJECTS)
 endif
+# End DARWIN -------------------------------------------------------------
+# --- LINUX -----
+ifeq ($(PLATFORM), linux)
+LINK_COMMAND = $(CXX) $(CXXOBJECTS) $(COBJECTS) $(LDFLAGS) -o $(PROGRAM)
+DEBUG_LINK_COMMAND = $(CXX)  $(CXXOBJECTS) $(COBJECTS) $(DEBUG_LDFLAGS) -o $(DEBUG_PROGRAM)
+endif
+# End LINUX -------------------------------------------------------------
+# --- FreeBSD ----
+ifeq ($(PLATFORM), freebsd)
+LINK_COMMAND = $(CXX) $(CXXOBJECTS) $(COBJECTS) $(LDFLAGS) -o $(PROGRAM)
+DEBUG_LINK_COMMAND = $(CXX)  $(CXXOBJECTS) $(COBJECTS) $(DEBUG_LDFLAGS) -o $(DEBUG_PROGRAM)
+endif
+# End FreeBSD -------------------------------------------------------------
+endif
+
+
+
 
 
 # ---------------------------------------------------------------------
@@ -618,13 +644,13 @@ THROWAWAY = # empty
 endif
 
 $(PROGRAM): $(CXXOBJECTS) $(COBJECTS)
-	$(LINK_COMMAND) $(PROGRAM) $(CXXOBJECTS) $(COBJECTS)
+	$(LINK_COMMAND)
 
 debug: CFLAGS += $(DEBUG_FLAGS)
 debug: LIBS = $(DEBUG_LIBS)
 debug: LDFLAGS = $(DEBUG_LDFLAGS)
 debug: $(CXXOBJECTS) $(COBJECTS) 
-	$(DEBUG_LINK_COMMAND) $(DEBUG_PROGRAM) $(CXXOBJECTS) $(COBJECTS)
+	$(DEBUG_LINK_COMMAND)
 
 
 # ---------------------------------------------------------------------
