Minor fix to OTLib Makefile.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/OTLib/Makefile
+++ b/OTLib/Makefile
@@ -201,11 +201,11 @@ CXXFLAGS   := _____FLAGS_NOT_SET____
 CFLAGS     := _____FLAGS_NOT_SET____ 
 
 ifeq ($(DYNAMIC_OTLIB), 1)
-CXXFLAGS   = $(INCLUDEDIRS) -Wall -fPIC
-CFLAGS     = $(INCLUDEDIRS) -Wall -fPIC 
+CXXFLAGS   = $(INCLUDEDIRS) $(FT_FLAGS) -Wall -fPIC
+CFLAGS     = $(INCLUDEDIRS) $(FT_FLAGS) -Wall -fPIC 
 else
-CXXFLAGS   = $(INCLUDEDIRS) -Wall
-CFLAGS     = $(INCLUDEDIRS) -Wall
+CXXFLAGS   = $(INCLUDEDIRS) $(FT_FLAGS) -Wall
+CFLAGS     = $(INCLUDEDIRS) $(FT_FLAGS) -Wall
 endif
 
 #
